Поиск способа обойти ограничение на символы в секунду